# MFCMusicPlayer

./: .gitignore  AtlTraceRedirect.cpp  AtlTraceRedirect.h  CMakeLists.txt  CMakeSettings.json  EqualizerDialog.cpp  EqualizerDialog.h  LICENSE.thirdparty.txt  LrcManagerWnd.cpp  LrcManagerWnd.h  MFCMusicPlayer.cpp  MFCMusicPlayer.h  MFCMusicPlayer.rc  MFCMusicPlayer.sln  MFCMusicPlayer.vcxproj  MFCMusicPlayer.vcxproj.filters  MFCMusicPlayerDlg.cpp  MFCMusicPlayerDlg.h  MusicPlayer.cpp  MusicPlayer.h  MusicPlayerSettingDlg.cpp  MusicPlayerSettingDlg.h  MusicPlayerSettingsManager.cpp  MusicPlayerSettingsManager.h  NcmDecryptor.cpp  NcmDecryptor.h  OpenMethodLinker.cpp  OpenMethodLinker.h  PlayListDialog.cpp  PlayListDialog.h  PlaylistController.cpp  PlaylistController.h  README.md  SpectrumVisualizer.cpp  SpectrumVisualizer.h  WinRT_SMTCController.cpp  WinRT_SMTCController.h  framework.h  pch.cpp  resource.h  (+1 more)
.github/workflows/: build-release.yaml
res/: MFCMusicPlayer.rc2
